and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

21th November 2014  Laurent Garnier  (opengl-V10-00-27)
- G4OpenGLStoredQtViewer/G4OpenGLImmediatedQtViewer :
 o Avoid repainting problems by disable recursive repaints (from last commit)

20th November 2014  Laurent Garnier  (opengl-V10-00-26)
- G4OpenGLVboDrawer: 
 o Fix a compilation issue with Wt driver
- G4OpenGLStoredQtViewer/G4OpenGLImmediatedQtViewer :
 o Avoid recursive repaints
- G4OpenGLQtViewer : 
 o Fix some minor GUI visual issues

19th November 2014  Laurent Garnier  (opengl-V10-00-25)
- G4OpenGLQtViewer: Allow viewer properties/picking/scene tree to be accessible
  from an external application

18th November 2014  Laurent Garnier  (opengl-V10-00-24)
- G4OpenGLQtViewer: Fix JIRA DEV-173 about using external application 

7th November 2014  Laurent Garnier  (opengl-V10-00-22 - opengl-V10-00-23)
- G4OpenGLQtViewer:
 o Fix the "invalid drawable" warning in Qt
 o Set the scene tree / viewer properties / picking open at the beggining
 o Move "search" at the top of scene tree component
 o Fix a problem with Picking composant, it was impossible to disable it. 
 o Add viewer properties and picking for Immediate mode
 o Fix a possible problem for fSceneHandler.GetScene()
 o Hide picking infos at the beggining
 o open all scene tree items
- G4OpenGLStoredQtViewer:
 o Remove ClearView() : Cause the ugly window problem

- G4OpenGLViewer:
 o Fix glCheckFramebufferStatus problem by #ifdef GL_VERSION_3

6th November 2014  Laurent Garnier
- G4OpenGLQtViewer :
 o Rename fWindow by fGLWidget and avoid problems for users using an
   external Qt Application (and external Main Window)