@@ -36,8 +36,9 @@
 #include "G4OpenGLImmediateSceneHandler.hh"
 
 #include "G4ios.hh"
+#ifdef G4MULTITHREADED
 #include "G4Threading.hh"
-
+#endif
 #include <qapplication.h>
 #include <qevent.h>
 
@@ -145,9 +146,13 @@ void G4OpenGLImmediateQtViewer::initializeGL () {
 
 
 void  G4OpenGLImmediateQtViewer::DrawView() {
+#ifdef G4MULTITHREADED
   if (G4Threading::G4GetThreadId() == G4Threading::MASTER_ID) {
     updateQWidget();
   }
+#else
+  updateQWidget();
+#endif
 }
 
 
